[build-system]
requires = [
    "hatchling",
    "requests>=2.0.1",
    "requests-toolbelt==0.9.1"
]
build-backend = "hatchling.build"

[project]
name = "doorloop"
version = "0.0.6"
authors = [
  { name="Colin McFaul", email="colinjmcfaul@gmail.com" },
]
description = "This library provides a pure python interface to interact with the DoorLoop API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cjmcfaul/doorloop"
"Bugtracker" = "https://github.com/cjmcfaul/doorloop/issues"
"Documentation" = "https://api.doorloop.com/reference/introduction"